--- a/static/cover.css
+++ b/static/cover.css
@@ -19,6 +19,8 @@
 .cover {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  background-image: url("cover.jpg");
+  background-size: cover;
 }
 
 html, body {
