--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='cover.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='carousel.css') }}">
 {% endblock %}
-{% block title %}Homepage{% endblock %}
+{% block title %}Início{% endblock %}
 {% block body %}
 <div class="cover d-flex h-100 text-center text-white bg-dark">
     
@@ -12,23 +12,23 @@
         <div>
           <h3 class="float-md-start mb-0">LVGVS Photos</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link active" aria-current="page" href="#">Início</a>
+            <a class="nav-link" href="#">Galeria</a>
+            <a class="nav-link" href="#">Contato</a>
           </nav>
         </div>
       </header>
     
       <main class="px-3">
         <h1>LVGVS Photos</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+        <p class="lead">Eu sou o Lucas; engenheiro ambiental, web dev, guitarrista, escritor e fotógrafo. <br>Fiz esse site para mostrar um pouco desse meu trabalho.</p>
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+          <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Veja mais</a>
         </p>
       </main>
     
       <footer class="mt-auto text-white-50">
-        <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+        <p>© LVGVS Photos - Todos os direitos reservados.</p>
       </footer>
     </div>
     
@@ -45,13 +45,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img class="carousel-img" width="100%" height="100%" src="{{ url_for('static', filename='image.jpg') }}"/></svg>
   
           <div class="container">
             <div class="carousel-caption text-start">
-              <h1>Example headline.</h1>
-              <p>Some representative placeholder content for the first slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+              <h1>Retratos</h1>
+              <p>A melhor maneira de promover a própria imagem.</p>
+              <p><a class="btn btn-lg btn-primary" href="#">Veja mais</a></p>
             </div>
           </div>
         </div>
