--- a/templates/home.html
+++ b/templates/home.html
@@ -45,12 +45,12 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><img class="carousel-img" width="100%" height="100%" src="{{ url_for('static', filename='image.jpg') }}"/></svg>
+          <svg class="bd-placeholder-img carousel-portrait" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
   
           <div class="container">
             <div class="carousel-caption text-start">
               <h1>Retratos</h1>
-              <p>A melhor maneira de promover a própria imagem.</p>
+              <p>A melhor maneira de promover sua imagem pessoal.</p>
               <p><a class="btn btn-lg btn-primary" href="#">Veja mais</a></p>
             </div>
           </div>
