--- a/templates/home.html
+++ b/templates/home.html
@@ -98,25 +98,25 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-  
-          <h2>Heading</h2>
-          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-          <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+          <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="{{ url_for('static', filename='anaflavia.jpg') }}">
+          <br>
+          <br>
+          <p>"Eu admito que estava com vergonha no início, mas depois fui me sentindo confortável e foi muito divertido."</p>
+          <h5> - Ana Flávia</h5>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-  
-          <h2>Heading</h2>
-          <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-          <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+          <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="{{ url_for('static', filename='ana.jpg') }}">
+          <br>
+          <br>
+          <p>"A gente usou algumas luzes coloridas que estavam em uma calçada. Não imaginei que as fotos ficariam tão lindas."</p>
+          <h5> - Ana</h5>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-  
-          <h2>Heading</h2>
-          <p>And lastly this, the third column of representative placeholder content.</p>
-          <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+          <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="{{ url_for('static', filename='richardson.jpg') }}">
+          <br>
+          <br>
+          <p>O bom de ter um primo fotógrafo é que todas as nossas viagens vem acompanhadas de fotos incríveis!</p>
+          <h5> - Richardson</h5>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
   
