--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
       </main>
     
       <footer class="mt-auto text-white-50">
-        <p>© LVGVS Photos - Todos os direitos reservados.</p>
+        <p>&copy; LVGVS Photos - Todos os direitos reservados.</p>
       </footer>
     </div>
     
@@ -172,7 +172,8 @@
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; LVGVS Photos - Todos os direitos reservados. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
+    <br>
   </main>
 {% endblock %}
