--- a/static/carousel.css
+++ b/static/carousel.css
@@ -13,6 +13,7 @@ body {
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
