--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -190,7 +190,7 @@
             <input class="large" id="tel" name="tel" type="text" placeholder="(xx) 9xxxx-xxxx"><br>
             <label class="lead" for="email">Seu E-mail</label><br>
             <input class="large" id="email" name="email" type="text" placeholder="nome@domínio.com"><br>
-            <label class="lead" for="msg">Seu nome</label><br>
+            <label class="lead" for="msg">Sua mensagem</label><br>
             <textarea class="large" rows="5" id="msg" name="msg" type="text" placeholder="Mensagem"></textarea>
             <button type="submit" class="float-end btn btn-secondary fw-bold border-gray bg-gray text-white text-decoration-none">Enviar</button>
 
