--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -148,7 +148,7 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Álbum <span class="text-muted">"Ana".</span></h2>
-          <p class="lead">Veja os retratos da Ana, feitos bem despojadamente durante uma caminhada noturna pela cidade. Foi uma experiência muito divertida.</p>
+          <p class="lead">Os retratos da Ana, feitos bem despojadamente durante uma caminhada noturna pela cidade.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <a data-flickr-embed="true" href="https://www.flickr.com/photos/lucas-camargo/albums/72177720296505325" title="Ana">
