--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -132,8 +132,8 @@
   
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Álbum <span class="text-muted">"Retratos".</span></h2>
-          <p class="lead">Veja aqui uma seleção dos retratos que já fotografei.</p>
+          <h2 class="featurette-heading">Álbum <span class="text-muted">"Retratos"</span></h2>
+          <p class="lead">Uma seleção dos retratos que já fotografei.</p>
         </div>
         <div class="col-md-5">
             <a data-flickr-embed="true" href="https://www.flickr.com/photos/lucas-camargo/albums/72157720259807250" title="Portraits">
@@ -147,7 +147,7 @@
   
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Álbum <span class="text-muted">"Ana".</span></h2>
+          <h2 class="featurette-heading">Álbum <span class="text-muted">"Ana"</span></h2>
           <p class="lead">Os retratos da Ana, feitos bem despojadamente durante uma caminhada noturna pela cidade.</p>
         </div>
         <div class="col-md-5 order-md-1">
@@ -161,7 +161,7 @@
   
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Álbum <span class="text-muted">"Chapada 2021".</span></h2>
+          <h2 class="featurette-heading">Álbum <span class="text-muted">"Chapada 2021"</span></h2>
           <p class="lead">Fotos feitas durante uma viagem para a Chapada dos Veadeiros, em 2021.</p>
         </div>
         <div class="col-md-5">
@@ -184,24 +184,24 @@
       <div class="row">
         <div class="col-lg-7">
           <form method="post">
-            <label class="lead" for="nome">Seu nome</label><br>
-            <input class="large" id="nome" name="name" type="text" placeholder="Nome"><br>
-            <label class="lead"for="tel">Seu telefone</label><br>
-            <input class="large" id="tel" name="tel" type="text" placeholder="(xx) 9xxxx-xxxx"><br>
-            <label class="lead" for="email">Seu E-mail</label><br>
-            <input class="large" id="email" name="email" type="text" placeholder="nome@domínio.com"><br>
-            <label class="lead" for="msg">Sua mensagem</label><br>
-            <textarea class="large" rows="5" id="msg" name="msg" type="text" placeholder="Mensagem"></textarea>
-            <button type="submit" class="float-end btn btn-secondary fw-bold border-gray bg-gray text-white text-decoration-none">Enviar</button>
+            <label class="lead form-label" for="nome">Seu nome</label><br>
+            <input class="form-control" id="nome" name="name" type="text" placeholder="Nome"><br>
+            <label class="lead form-label"for="phone">Seu telefone</label><br>
+            <input class="form-control" id="phone" name="phone" type="text" placeholder="(xx) 9xxxx-xxxx"><br>
+            <label class="lead form-label" for="email">Seu E-mail</label><br>
+            <input class="form-control" id="email" name="email" type="text" placeholder="nome@domínio.com"><br>
+            <label class="lead form-label" for="msg">Sua mensagem</label><br>
+            <textarea class="form-control" rows="5" id="msg" name="msg" type="text" placeholder="Mensagem"></textarea>
+            <button style="margin: 1rem 0;" type="submit" class="float-end btn btn-secondary fw-bold border-gray bg-gray text-white text-decoration-none">Enviar</button>
 
           </form>
         </div>
         <div class="col-md-5 contato">
-          <span>
-            <p class="lead text-end">E-mail: <a class="link-secondary" href="mailto:lucas-camargo@outlook.com">lucas-camargo@outlook.com</a></p>
-            <p class="lead text-end">Telefone: <a class="link-secondary" href="tel:+5562993503724">(62) 9 9350-3724</a></p>
-            <p class="lead text-end">Instagram: <a class="link-secondary" href="https://instagram.com/lvgvspe">@lvgvspe</a></p>
-          </span>
+          <div class="float-end">
+            <p class="lead text-start">E-mail: <a class="link-secondary" href="mailto:lucas-camargo@outlook.com">lucas-camargo@outlook.com</a></p>
+            <p class="lead text-start">Telefone: <a class="link-secondary" href="tel:+5562993503724">(62) 9 9350-3724</a></p>
+            <p class="lead text-start">Instagram: <a class="link-secondary" href="https://instagram.com/lvgvspe">@lvgvspe</a></p>
+          </div>
         </div>
       </div>
     </div>
