--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -186,10 +186,10 @@
           <form method="post">
             <label class="lead form-label" for="nome">Seu nome</label><br>
             <input class="form-control" id="nome" name="name" type="text" placeholder="Nome"><br>
-            <label class="lead form-label"for="phone">Seu telefone</label><br>
-            <input class="form-control" id="phone" name="phone" type="text" placeholder="(xx) 9xxxx-xxxx"><br>
+            <label class="lead form-label"for="tel">Seu telefone</label><br>
+            <input class="form-control" id="tel" name="tel" type="tel" placeholder="(xx) 9xxxx-xxxx"><br>
             <label class="lead form-label" for="email">Seu E-mail</label><br>
-            <input class="form-control" id="email" name="email" type="text" placeholder="nome@domínio.com"><br>
+            <input class="form-control" id="email" name="email" type="email" placeholder="nome@domínio.com"><br>
             <label class="lead form-label" for="msg">Sua mensagem</label><br>
             <textarea class="form-control" rows="5" id="msg" name="msg" type="text" placeholder="Mensagem"></textarea>
             <button style="margin: 1rem 0;" type="submit" class="float-end btn btn-secondary fw-bold border-gray bg-gray text-white text-decoration-none">Enviar</button>
