--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -161,12 +161,12 @@
   
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Álbum <span class="text-muted">"Chapada 2021"</span></h2>
-          <p class="lead">Fotos feitas durante uma viagem para a Chapada dos Veadeiros, em 2021.</p>
+          <h2 class="featurette-heading">Álbum <span class="text-muted">"Paisagens"</span></h2>
+          <p class="lead">Fotos de paisagens feitas principalmente durante viagens.</p>
         </div>
         <div class="col-md-5">
-          <a data-flickr-embed="true" href="https://www.flickr.com/photos/lucas-camargo/albums/72157720259759105" title="Chapada 2021">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="https://live.staticflickr.com/65535/51725053672_a6e96755f0_h.jpg" width="400" height="400" alt="Chapada 2021">
+          <a data-flickr-embed="true" href="https://www.flickr.com/photos/lucas-camargo/albums/72177720297420526" title="Scapes">
+            <img src="https://live.staticflickr.com/65535/51884759540_35e2d0cf7a_h.jpg" width="1600" height="1200" alt="Scapes">
           </a>
         </div>
       </div>
