--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -137,7 +137,7 @@
         </div>
         <div class="col-md-5">
             <a data-flickr-embed="true" href="https://www.flickr.com/photos/lucas-camargo/albums/72157720259807250" title="Portraits">
-              <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="https://live.staticflickr.com/65535/51725054447_c36d992c16_h.jpg" width="400" height="267" alt="Portraits">
+              <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="https://live.staticflickr.com/65535/51725054447_c36d992c16_h.jpg" alt="Portraits">
             </a>
   
         </div>
@@ -152,7 +152,7 @@
         </div>
         <div class="col-md-5 order-md-1">
           <a data-flickr-embed="true" href="https://www.flickr.com/photos/lucas-camargo/albums/72177720296505325" title="Ana">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="https://live.staticflickr.com/65535/51865675361_895bf41ef8_h.jpg" width="400" height="400" alt="Ana">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="https://live.staticflickr.com/65535/51865675361_895bf41ef8_h.jpg" alt="Ana">
           </a>
         </div>
       </div>
@@ -166,7 +166,7 @@
         </div>
         <div class="col-md-5">
           <a data-flickr-embed="true" href="https://www.flickr.com/photos/lucas-camargo/albums/72177720297420526" title="Scapes">
-            <img src="https://live.staticflickr.com/65535/51884759540_35e2d0cf7a_h.jpg" width="1600" height="1200" alt="Scapes">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="https://live.staticflickr.com/65535/51884759540_35e2d0cf7a_h.jpg" alt="Scapes">
           </a>
         </div>
       </div>
