--- a/static/carousel.css
+++ b/static/carousel.css
@@ -99,18 +99,21 @@ body {
   background-image: url("portrait.jpg");
   background-position: center;
   background-size: cover;
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .carousel-event {
   background-image: url("event.jpg");
   background-position: center;
   background-size: cover;
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .carousel-art {
   background-image: url("art.jpg");
   background-position: center;
   background-size: cover;
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .rounded-circle {
